--- a/index.html
+++ b/index.html
@@ -3,11 +3,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap-social.css" rel="stylesheet">
+    <link href="mystyles.css" rel="stylesheet" type="text/css">
     <link href="css/mystyles.css" rel="stylesheet">
     <title>Ristorante Con Fusion</title>
   </head><body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active">
+              <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                         Menu <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Appetizers</a>
+                </li>
+                <li>
+                  <a href="#">Main Courses</a>
+                </li>
+                <li>
+                  <a href="#">Desserts</a>
+                </li>
+                <li>
+                  <a href="#">Drinks</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Specials</li>
+                <li>
+                  <a href="#">Lunch Buffet</a>
+                </li>
+                <li>
+                  <a href="#">Weekend Brunch</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <header class="jumbotron">
       <!-- Main component for a primary marketing message or call to action
       -->
@@ -97,20 +150,25 @@
             <address>121, Clear Water Bay Road
               <br>Clear Water Bay, Kowloon
               <br>HONG KONG
-              <br>Tel.: +852 1234 5678
-              <br>Fax: +852 8765 4321
-              <br>Email:
+              <br>
+              <i class="fa fa-phone"></i>Tel.: +852 1234 5678
+              <br>
+              <i class="fa fa-fax"></i>Fax: +852 8765 4321
+              <br>
+              <i class="fa fa-envelope"></i>
               <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
           </div>
           <div class="col-xs-12 col-sm-4">
             <div style="padding: 40px 10px;">
-              <a href="http://google.com/+">Google+</a>
-              <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-              <a href="http://www.linkedin.com/in/">LinkedIn</a>
-              <a href="http://twitter.com/">Twitter</a>
-              <a href="http://youtube.com/">YouTube</a>
-              <a href="mailto:">Mail</a>
+              <div class="nav navbar-nav" style="padding: 40px 10px;">
+                <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
+                <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+              </div>
             </div>
           </div>
           <div class="col-xs-12">
@@ -120,6 +178,6 @@
         </div>
       </div>
     </footer>
-
+  
 
 </body></html>
