--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
-    <link href="mystyles.css" rel="stylesheet" type="text/css">
     <link href="css/mystyles.css" rel="stylesheet">
     <title>Ristorante Con Fusion</title>
   </head><body>
@@ -18,15 +17,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+          <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active">
-              <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
+              <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="aboutus.html">About</a>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -178,6 +177,6 @@
         </div>
       </div>
     </footer>
-  
+
 
 </body></html>
