--- a/aboutus.html
+++ b/aboutus.html
@@ -79,7 +79,7 @@
     </header>
 
     <div class='container'>
-        <div class='row row-header'>
+        <div class='row'>
             <div class='col-xs-12'>
               <ol class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
