--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Contact</a>
+                <a href="contactus.html">Contact</a>
               </li>
             </ul>
           </div>
