added nav icons

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
           </li>
           <li>
             <a href="aboutus.html"><span class="glyphicon glyphicon-info-sign"
-              aria-hidden="true">About</a>
+              aria-hidden="true"></span> About</a>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                Menu <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+              aria-haspopup="true" aria-expanded="false"><span class='glyphicon glyphicon-list-alt'></span>
+               Menu <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li>
                     <a href="#">Appetizers</a>
@@ -58,7 +59,8 @@
                 </ul>
               </li>
               <li>
-                <a href="contactus.html">Contact</a>
+                <a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a>
+
               </li>
             </ul>
           </div>
