--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
                          aria-hidden="true"></span> About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                         role="button" aria-haspopup="true" aria-expanded="false">
+                         role="button" aria-haspopup="true" aria-expanded="false"><span class='glyphicon glyphicon-list-alt'></span>
                          Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
@@ -57,7 +57,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a href="contactus.html">Contact</a></li>
+                    <li class="active"><a href="contactus.html"><i class='fa fa-envelope-o'></i> Contact</a></li>
                 </ul>
             </div>
         </div>
